refactoring for docker